# project

./: .gitignore  CMakeLists.txt  README.md
project/: project.slnx
project/project/: project.vcxproj
resources/: f.text
src/: main.cpp
src/game_layer/: asset_manager.cpp  asset_manager.h  blocks.h  game_main.cpp  game_main.h  game_map.cpp  game_map.h  helpers.cpp  helpres.h  rng.cpp  rng.h  world_generator.cpp  world_generator.h
src/platform/: main.cpp
